--- a/Source/AlephNote.App/WPF/Controls/PHelpBtn.xaml
+++ b/Source/AlephNote.App/WPF/Controls/PHelpBtn.xaml
@@ -3,8 +3,8 @@
 			 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 			 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
 			 xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-			 xmlns:conv="clr-namespace:AlephNote.WPF.Converter"
 			 xmlns:controls="clr-namespace:AlephNote.WPF.Controls"
+			 xmlns:locconv="clr-namespace:AlephNote.WPF.Converter"
 			 mc:Ignorable="d" 
 			 Height="16" Width="16">
 	<Grid x:Name="LayoutRoot" d:DataContext="{d:DesignInstance controls:PHelpBtn}"
@@ -25,7 +25,7 @@
 				<Border BorderThickness="1" BorderBrush="Black">
 					<TextBox x:Name="PopupTextBox" Margin="4"
 						FontFamily="Courier New"
-						Text="{Binding HelpProperty, Converter={conv:PropertyToHelpText} }" 
+						Text="{Binding HelpProperty, Converter={locconv:PropertyToHelpText} }" 
 						TextWrapping="Wrap" IsReadOnly="True" Background="Transparent" BorderThickness="0"/>
 				</Border>
 			</Grid>
