--- a/Source/AlephNote.App/WPF/Controls/SearchBox.xaml
+++ b/Source/AlephNote.App/WPF/Controls/SearchBox.xaml
@@ -3,9 +3,9 @@
 			 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 			 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
 			 xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-			 xmlns:conv="clr-namespace:AlephNote.WPF.Converter"
+			 xmlns:conv="clr-namespace:MSHC.WPF.Converter;assembly=CSharpUtils"
 			 xmlns:controls="clr-namespace:AlephNote.WPF.Controls"
-			xmlns:ext="clr-namespace:AlephNote.WPF.Extensions"
+			 xmlns:ext="clr-namespace:AlephNote.WPF.Extensions"
 			 mc:Ignorable="d" 
 			 d:DesignHeight="28" d:DesignWidth="500">
 
