--- a/Source/AlephNote.App/WPF/Controls/TagCtrl/TagEditor2.xaml
+++ b/Source/AlephNote.App/WPF/Controls/TagCtrl/TagEditor2.xaml
@@ -4,10 +4,10 @@
 			 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
 			 xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
 			 xmlns:self="clr-namespace:AlephNote.WPF.Controls"
-			 xmlns:conv="clr-namespace:AlephNote.WPF.Converter"
+			 xmlns:conv="clr-namespace:MSHC.WPF.Converter;assembly=CSharpUtils"
+			 xmlns:locconv="clr-namespace:AlephNote.WPF.Converter"
 			 xmlns:ext="clr-namespace:AlephNote.WPF.Extensions"
 			 xmlns:tki="clr-namespace:System.Windows.Controls;assembly=System.Windows.Controls.Input.Toolkit"
-			 xmlns:System="clr-namespace:System;assembly=mscorlib"
 			 mc:Ignorable="d">
 	<UserControl.Resources>
 		<ResourceDictionary>
@@ -132,7 +132,7 @@
 									<ControlTemplate TargetType="Button">
 										<Border x:Name="PART_TagBorder" 
 												VerticalAlignment="Stretch" HorizontalAlignment="Stretch" 
-												BorderBrush="{ext:ThemeSlaveBinding {Binding Text, Converter={conv:TagToBorderBrush}}}" 
+												BorderBrush="{ext:ThemeSlaveBinding {Binding Text, Converter={locconv:TagToBorderBrush}}}" 
 												BorderThickness="1" 
 												Margin="{TemplateBinding Margin}" 
 												Padding="3,0,0,0" Background="{ext:ThemeBinding 'window.tageditor.tag:background'}" 
