--- a/Source/AlephNote.App/WPF/Dialogs/GenericInputDialog.xaml
+++ b/Source/AlephNote.App/WPF/Dialogs/GenericInputDialog.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:conv="clr-namespace:AlephNote.WPF.Converter"
+        xmlns:conv="clr-namespace:MSHC.WPF.Converter;assembly=CSharpUtils"
         xmlns:self="clr-namespace:AlephNote.WPF.Dialogs"
         mc:Ignorable="d" ResizeMode="NoResize"
         WindowStartupLocation="CenterOwner"
