--- a/Source/AlephNote.App/WPF/Windows/LogWindow.xaml
+++ b/Source/AlephNote.App/WPF/Windows/LogWindow.xaml
@@ -5,7 +5,8 @@
 		xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 		xmlns:windows="clr-namespace:AlephNote.WPF.Windows"
 		xmlns:log="clr-namespace:AlephNote.Log"
-		xmlns:conv="clr-namespace:AlephNote.WPF.Converter"
+		xmlns:conv="clr-namespace:MSHC.WPF.Converter;assembly=CSharpUtils"
+		xmlns:locconv="clr-namespace:AlephNote.WPF.Converter"
 		mc:Ignorable="d" 
 		d:DataContext="{d:DesignInstance windows:LogWindowViewmodel}"
 		WindowStartupLocation="CenterOwner"
@@ -17,52 +18,52 @@
 		<DataTemplate x:Key="RowTemplateType" DataType="{x:Type log:LogEvent}">
 			<TextBlock Text="{Binding Type, Mode=OneWay}" >
 				<TextBlock.Foreground>
-					<Binding Path="Type" Converter="{conv:LogToForeground}" />
+					<Binding Path="Type" Converter="{locconv:LogToForeground}" />
 				</TextBlock.Foreground>
 				<TextBlock.FontWeight>
-					<Binding Path="Type" Converter="{conv:LogToFontWeight}" />
+					<Binding Path="Type" Converter="{locconv:LogToFontWeight}" />
 				</TextBlock.FontWeight>
 				<TextBlock.FontStyle>
-					<Binding Path="Type" Converter="{conv:LogToFontStyle}" />
+					<Binding Path="Type" Converter="{locconv:LogToFontStyle}" />
 				</TextBlock.FontStyle>
 			</TextBlock>
 		</DataTemplate>
 		<DataTemplate x:Key="RowTemplateSource" DataType="{x:Type log:LogEvent}">
 			<TextBlock Text="{Binding Source, Mode=OneWay}"  >
 				<TextBlock.Foreground>
-					<Binding Path="Type" Converter="{conv:LogToForeground}" />
+					<Binding Path="Type" Converter="{locconv:LogToForeground}" />
 				</TextBlock.Foreground>
 				<TextBlock.FontWeight>
-					<Binding Path="Type" Converter="{conv:LogToFontWeight}" />
+					<Binding Path="Type" Converter="{locconv:LogToFontWeight}" />
 				</TextBlock.FontWeight>
 				<TextBlock.FontStyle>
-					<Binding Path="Type" Converter="{conv:LogToFontStyle}" />
+					<Binding Path="Type" Converter="{locconv:LogToFontStyle}" />
 				</TextBlock.FontStyle>
 			</TextBlock>
 		</DataTemplate>
 		<DataTemplate x:Key="RowTemplateDate" DataType="{x:Type log:LogEvent}">
 			<TextBlock Text="{Binding DateTime, Converter={conv:TodayDateTimeToDisplay}, Mode=OneWay}"  >
 				<TextBlock.Foreground>
-					<Binding Path="Type" Converter="{conv:LogToForeground}" />
+					<Binding Path="Type" Converter="{locconv:LogToForeground}" />
 				</TextBlock.Foreground>
 				<TextBlock.FontWeight>
-					<Binding Path="Type" Converter="{conv:LogToFontWeight}" />
+					<Binding Path="Type" Converter="{locconv:LogToFontWeight}" />
 				</TextBlock.FontWeight>
 				<TextBlock.FontStyle>
-					<Binding Path="Type" Converter="{conv:LogToFontStyle}" />
+					<Binding Path="Type" Converter="{locconv:LogToFontStyle}" />
 				</TextBlock.FontStyle>
 			</TextBlock>
 		</DataTemplate>
 		<DataTemplate x:Key="RowTemplateText" DataType="{x:Type log:LogEvent}">
 			<TextBlock Text="{Binding Text, Mode=OneWay}" >
 				<TextBlock.Foreground>
-					<Binding Path="Type" Converter="{conv:LogToForeground}" />
+					<Binding Path="Type" Converter="{locconv:LogToForeground}" />
 				</TextBlock.Foreground>
 				<TextBlock.FontWeight>
-					<Binding Path="Type" Converter="{conv:LogToFontWeight}" />
+					<Binding Path="Type" Converter="{locconv:LogToFontWeight}" />
 				</TextBlock.FontWeight>
 				<TextBlock.FontStyle>
-					<Binding Path="Type" Converter="{conv:LogToFontStyle}" />
+					<Binding Path="Type" Converter="{locconv:LogToFontStyle}" />
 				</TextBlock.FontStyle>
 			</TextBlock>
 		</DataTemplate>
@@ -99,7 +100,7 @@
 				<Style TargetType="ListViewItem">
 					<Style.Triggers>
 						<Trigger Property="ListViewItem.IsSelected" Value="False">
-							<Setter Property="Background" Value="{Binding Type, Converter={conv:LogToBackground}}" />
+							<Setter Property="Background" Value="{Binding Type, Converter={locconv:LogToBackground}}" />
 						</Trigger>
 					</Style.Triggers>
 				</Style>
