--- a/Source/AlephNote.App/WPF/Windows/ThemeEditor.xaml
+++ b/Source/AlephNote.App/WPF/Windows/ThemeEditor.xaml
@@ -5,7 +5,7 @@
 		xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 		xmlns:local="clr-namespace:AlephNote.WPF.Windows"
 		xmlns:scinet="clr-namespace:ScintillaNET;assembly=ScintillaNET"
-        xmlns:conv="clr-namespace:AlephNote.WPF.Converter"
+        xmlns:conv="clr-namespace:MSHC.WPF.Converter;assembly=CSharpUtils"
         xmlns:proxy="clr-namespace:MSHC.WPF.BindingProxies;assembly=CSharpUtils"
 		mc:Ignorable="d"
 		WindowStartupLocation="CenterOwner"
