Add support for multi-selecting notes
--> fixes #98

--- a/Source/AlephNote.App/WPF/Controls/NotesViewFlat.xaml
+++ b/Source/AlephNote.App/WPF/Controls/NotesViewFlat.xaml
@@ -44,7 +44,7 @@
 					  HorizontalContentAlignment="Stretch"
 					  ScrollViewer.HorizontalScrollBarVisibility="Disabled"
 					  ScrollViewer.CanContentScroll="{Binding Settings.SmoothScrollNotesView, Converter={conv:NegateBool}}"
-					  SelectionMode="Single"
+					  SelectionMode="{Binding Settings.MultiNoteSelection, Converter={locconv:BoolToListViewSelectionMode}}"
 					  Background="{ext:ThemeBinding 'window.notesview.flat:background'}"
 					  Foreground="{ext:ThemeBinding 'window.notesview.flat:foreground'}"
 					  ItemsSource="{Binding NotesView}" 
