--- a/Source/AlephNote.App/WPF/Windows/SettingsWindow.xaml
+++ b/Source/AlephNote.App/WPF/Windows/SettingsWindow.xaml
@@ -580,6 +580,7 @@
 										<RowDefinition Height="Auto" />
 										<RowDefinition Height="Auto" />
 										<RowDefinition Height="Auto" />
+										<RowDefinition Height="Auto" />
 									</Grid.RowDefinitions>
 									
 									<CheckBox Grid.Row="0" Grid.Column="0" Margin="2" Content="Word wrap" IsChecked="{Binding Settings.SciWordWrap}" />
@@ -588,8 +589,11 @@
 									<ctrl:PHelpBtn Grid.Row="1" Grid.Column="1" HelpProperty="SciShowWhitespace" Margin="2,0" VerticalAlignment="Center" />
 
 									<CheckBox Grid.Row="2" Grid.Column="0" Margin="2" Content="Show EOL" IsChecked="{Binding Settings.SciShowEOL}" />
-									
+
 									<CheckBox Grid.Row="3" Grid.Column="0" Margin="2" Content="Scroll after last line" IsChecked="{Binding Settings.SciScrollAfterLastLine}" />
+
+									<CheckBox Grid.Row="4" Grid.Column="0" Margin="2" Content="Extended Line Cut/Copy" IsChecked="{Binding Settings.VSLineCopy}" />
+									<ctrl:PHelpBtn Grid.Row="4" Grid.Column="1" HelpProperty="VSLineCopy" Margin="2,0" VerticalAlignment="Center" />
 								</Grid>
 
 								<TextBlock     Grid.Row="1" Grid.Column="0" Margin="3" VerticalAlignment="Center" Text="Tab Width" />
